src/test/ui/hr-subtype/hr-subtype.free_x_vs_free_y.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/hr-subtype.rs:49:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | |                             fn(&'y u32)) }
   | |__________________________________________- in this macro invocation

error: unsatisfied lifetime constraints
  --> $DIR/hr-subtype.rs:49:13
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                        -- -- lifetime `'y` defined here
   |                        |
   |                        lifetime `'x` defined here
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'x` must outlive `'y`
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | |                             fn(&'y u32)) }
   | |__________________________________________- in this macro invocation

error: aborting due to previous error

